configuring appsettings, sending emails and working with static files

--- a/Blog/appsettings.json
+++ b/Blog/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "JwtKey": "6ff989b6-c9f3-4de7-beb4-91e54e114142",
+  "ApiKeyName": "api_key",
+  "ApiKey": "curso_api_597e73e7-3913-42b9-",
+  "Smtp": {
+    "Host": "smtp.sendgrid.net",
+    "Port": "587",
+    "UserName": "apikey",
+    "Password": "<yourpassword>>"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
