migration for aspnet5, creating environments and add swagger

--- a/Blog/appsettings.json
+++ b/Blog/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Env": "production",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=Blog;User ID=sa;Password=S4k0r400;TrustServerCertificate=True "
+  },
   "JwtKey": "6ff989b6-c9f3-4de7-beb4-91e54e114142",
   "ApiKeyName": "api_key",
   "ApiKey": "curso_api_597e73e7-3913-42b9-",
