--- a/Blog/Properties/launchSettings.json
+++ b/Blog/Properties/launchSettings.json
@@ -11,7 +11,8 @@
     "Blog": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
+      "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7209;http://localhost:5172",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
